Criação da Partial View para Inclusão e Edição.
Signed-off-by: Rodrigo Oliveira <rodrigo.oliveira2@prodeb.ba.gov.br>

--- a/SGPH/Views/Funcionarios/Editar.cshtml
+++ b/SGPH/Views/Funcionarios/Editar.cshtml
@@ -1,164 +1,9 @@
 ﻿@model SGPH.Models.ViewModels.FuncionarioViewModel
 
 @{
-    ViewBag.Title = "Editar Funcionario";
+    ViewBag.Title = "Editar Funcionário";
 }
 
-<h2>Editar</h2>
+<h2>Editar Funcionário</h2>
 
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
-@using (Html.BeginForm()) {
-    @Html.ValidationSummary("Corrija os erros abaixo e tente novamente.")
-    <fieldset>
-        <legend>Funcionario</legend>
-
-        @Html.HiddenFor(model => model.Funcionario.Id)
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Nome)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Funcionario.Nome)
-            @Html.ValidationMessageFor(model => model.Funcionario.Nome, "*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Matricula)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Funcionario.Matricula)
-            @Html.ValidationMessageFor(model => model.Funcionario.Matricula, "*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.DataNascimento)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Funcionario.DataNascimento)
-            @Html.ValidationMessageFor(model => model.Funcionario.DataNascimento, "*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Email)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Funcionario.Email)
-            @Html.ValidationMessageFor(model => model.Funcionario.Email,"*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Telefone)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Funcionario.Telefone)
-            @Html.ValidationMessageFor(model => model.Funcionario.Telefone, "*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Ramal)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Funcionario.Ramal)
-            @Html.ValidationMessageFor(model => model.Funcionario.Ramal, "*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Logradouro)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Funcionario.Logradouro)
-            @Html.ValidationMessageFor(model => model.Funcionario.Logradouro, "*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Numero)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Funcionario.Numero)
-            @Html.ValidationMessageFor(model => model.Funcionario.Numero, "*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Bairro)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Funcionario.Bairro)
-            @Html.ValidationMessageFor(model => model.Funcionario.Bairro,"*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Complemento)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Funcionario.Complemento)
-            @Html.ValidationMessageFor(model => model.Funcionario.Complemento,"*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Cep)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Funcionario.Cep)
-            @Html.ValidationMessageFor(model => model.Funcionario.Cep,"*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Cidades_Estados_Id)
-        </div>
-        <div class="editor-field">
-            @Html.DropDownListFor(model => model.Funcionario.Cidades_Estados_Id,Model.Estados)
-            @Html.ValidationMessageFor(model => model.Funcionario.Cidades_Estados_Id,"*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Cidades_Id)
-        </div>
-        <div class="editor-field">
-            @Html.DropDownListFor(model => model.Funcionario.Cidades_Id,Model.Cidades)
-            @Html.ValidationMessageFor(model => model.Funcionario.Cidades_Id,"*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Unidades_Id)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Funcionario.Unidades_Id)
-            @Html.ValidationMessageFor(model => model.Funcionario.Unidades_Id,"*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Setores_Id)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Funcionario.Setores_Id)
-            @Html.ValidationMessageFor(model => model.Funcionario.Setores_Id,"*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Cargos_Id)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Funcionario.Cargos_Id)
-            @Html.ValidationMessageFor(model => model.Funcionario.Cargos_Id,"*")
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Funcionario.Perfis_Id)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Funcionario.Perfis_Id)
-            @Html.ValidationMessageFor(model => model.Funcionario.Perfis_Id,"*")
-        </div>
-
-        <p>
-            <input type="submit" value="Salvar" />
-        </p>
-    </fieldset>
-}
-
-<div>
-    @Html.ActionLink("Voltar para Listagem", "Index")
-</div>
-
+@Html.Partial("FuncionarioForm")
