--- a/SGPH/Views/Funcionarios/Criar.cshtml
+++ b/SGPH/Views/Funcionarios/Criar.cshtml
@@ -1,162 +1,9 @@
-﻿@model SGPH.Models.Funcionario
+﻿@model SGPH.Models.ViewModels.FuncionarioViewModel
 
 @{
     ViewBag.Title = "Inserir Funcionario";
 }
 
-<h2>Criar</h2>
+<h2>Inserir Novo Funcionário</h2>
 
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
-@using (Html.BeginForm()) {
-    @Html.ValidationSummary(true)
-    <fieldset>
-        <legend>Funcionario</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Nome)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Nome)
-            @Html.ValidationMessageFor(model => model.Nome)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Matricula)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Matricula)
-            @Html.ValidationMessageFor(model => model.Matricula)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.DataNascimento)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.DataNascimento)
-            @Html.ValidationMessageFor(model => model.DataNascimento)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Email)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Email)
-            @Html.ValidationMessageFor(model => model.Email)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Telefone)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Telefone)
-            @Html.ValidationMessageFor(model => model.Telefone)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Ramal)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Ramal)
-            @Html.ValidationMessageFor(model => model.Ramal)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Logradouro)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Logradouro)
-            @Html.ValidationMessageFor(model => model.Logradouro)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Numero)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Numero)
-            @Html.ValidationMessageFor(model => model.Numero)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Bairro)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Bairro)
-            @Html.ValidationMessageFor(model => model.Bairro)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Complemento)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Complemento)
-            @Html.ValidationMessageFor(model => model.Complemento)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Cep)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Cep)
-            @Html.ValidationMessageFor(model => model.Cep)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Cidades_Estados_Id)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Cidades_Estados_Id)
-            @Html.ValidationMessageFor(model => model.Cidades_Estados_Id)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Cidades_Id)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Cidades_Id)
-            @Html.ValidationMessageFor(model => model.Cidades_Id)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Unidades_Id)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Unidades_Id)
-            @Html.ValidationMessageFor(model => model.Unidades_Id)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Setores_Id)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Setores_Id)
-            @Html.ValidationMessageFor(model => model.Setores_Id)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Cargos_Id)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Cargos_Id)
-            @Html.ValidationMessageFor(model => model.Cargos_Id)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Perfis_Id)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Perfis_Id)
-            @Html.ValidationMessageFor(model => model.Perfis_Id)
-        </div>
-
-        <p>
-            <input type="submit" value="Salvar" />
-        </p>
-    </fieldset>
-}
-
-<div>
-    @Html.ActionLink("Voltar para Listagem", "Index")
-</div>
-
+@Html.Partial("FuncionarioForm")
