--- a/SGPH/Views/Shared/_Layout.cshtml
+++ b/SGPH/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     
     <script src="@Url.Content("~/Scripts/jquery-1.4.4.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery-1.4.4-vsdoc.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.ui.core.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.ui.datepicker.js")" type="text/javascript"></script>
     
 
     <script type="text/javascript">
