--- a/SGPH/Views/Funcionarios/Index.cshtml
+++ b/SGPH/Views/Funcionarios/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Listagem de Funcionarios";
 }
 
-<h2>Index</h2>
+<h2>Lista de Funcionários</h2>
 
 <p>
     @Html.ActionLink("Inserir novo", "Criar")
