--- a/SGPH/Views/Shared/EditorTemplates/DateTime.cshtml
+++ b/SGPH/Views/Shared/EditorTemplates/DateTime.cshtml
@@ -1,9 +1,35 @@
 ﻿@model System.DateTime
-
-@Html.TextBox("",ViewData.TemplateInfo.FormattedModelValue,new {@class = "text-box single-line"})
-
+@Html.TextBox("", ViewData.TemplateInfo.FormattedModelValue, new { @class = "text-box single-line" })
 <script type="text/javascript">
     $(function () {
-        $('#@ViewData.TemplateInfo.GetFullHtmlFieldId("")').datepicker();
+        $.datepicker.regional['pt'] = {
+            closeText: 'Fechar',
+            prevText: '&#x3c;Anterior',
+            nextText: 'Seguinte',
+            currentText: 'Hoje',
+            monthNames: ['Janeiro', 'Fevereiro', 'Mar&ccedil;o', 'Abril', 'Maio', 'Junho',
+		'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
+            monthNamesShort: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun',
+		'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'],
+            dayNames: ['Domingo', 'Segunda-feira', 'Ter&ccedil;a-feira', 'Quarta-feira', 'Quinta-feira', 'Sexta-feira', 'S&aacute;bado'],
+            dayNamesShort: ['Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'S&aacute;b'],
+            dayNamesMin: ['Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'S&aacute;b'],
+            weekHeader: 'Sem',
+            dateFormat: 'dd/mm/yy',
+            firstDay: 0,
+            isRTL: false,
+            showMonthAfterYear: false,
+            yearSuffix: '',
+            yearRange: 'c-100:c+0'
+        };
+        $.datepicker.setDefaults($.datepicker.regional['pt']);
+        $('#@ViewData.TemplateInfo.GetFullHtmlFieldId("")').datepicker({
+            showButtonPanel: true,
+            changeMonth: true,
+            changeYear: true,
+            showOn: "button",
+            buttonImage: "/Content/themes/base/images/calendar_icon.gif",
+            buttonImageOnly: true
+        });
     });
 </script>
